Bug 145066 - EDITING ODT Moving a list item in Record Changes + Show Changes mode will delete the other items
Summary: EDITING ODT Moving a list item in Record Changes + Show Changes mode will del...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.3
Keywords: filter:odt
: 126714 (view as bug list)
Depends on:
Blocks: Track-Changes-Lists
  Show dependency treegraph
 
Reported: 2021-10-11 11:59 UTC by NISZ LibreOffice Team
Modified: 2021-12-07 15:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file with list (9.38 KB, application/vnd.oasis.opendocument.text)
2021-10-11 12:01 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Writer (10.29 KB, image/png)
2021-10-11 12:01 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-10-11 11:59:43 UTC
Description:
Moving a list item in Record Changes + Show Changes mode will delete the other items

Steps to Reproduce:
1.Open file 10_example2.odt (cursor on the first element in January).
2.Enable Record Changes and Show Changes
3.Click Move Down on the Bullets and Numbering toolbar
4.Click on Move Up
5.Click Move Down any number of times

Actual Results:
the list items are deleted, as shown in the screenshot of bug1*png.

Expected Results:
It should be left there by Writer


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: c2de581d1943df2d84f2b71817b6a8bee41f0217
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-10-11 12:01:17 UTC
Created attachment 175660 [details]
Example file with list
Comment 2 NISZ LibreOffice Team 2021-10-11 12:01:43 UTC
Created attachment 175661 [details]
Screenshot of the problem in Writer
Comment 3 Commit Notification 2021-10-12 06:58:23 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bcc06060bb286bd71a8fd1707eb499c8d2a88b69

tdf#145066 sw change tracking: fix bad deletion at Move Up/Down

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2021-10-12 19:38:25 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/9ff8f4db5ffde338f1f810cb88214fe94e21bc7c

tdf#145066 sw change tracking: fix bad deletion at Move Up/Down

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2021-11-04 09:25:08 UTC
Verified in:
Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: c7500945fc5d5bd2130a2d38be0bd4b15445cd90
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 6 László Németh 2021-12-07 15:30:28 UTC
*** Bug 126714 has been marked as a duplicate of this bug. ***