tdf#145066 sw change tracking: fix bad deletion at Move Up/Down

In Show Changes mode, moving a list item over
a deleted list item resulted the bad deletion
of the next adjacent paragraph, too.

Note: For manual testing with a non assert build,
put cursor in list item 2, click on Move Down once,
Move Up twice to show the bad deletion.

See also b5ab4836c03e9428aff6a48843f2a054ceff0f85
"tdf#39721 sw change tracking: fix move down".

Change-Id: Ie4dd1089dea4ed7068db94b134cd31881463c9ee